fix spacing

--- a/solql-documentation/src/css/custom.css
+++ b/solql-documentation/src/css/custom.css
@@ -246,7 +246,7 @@ dl p {
   .card-outline {
     flex-direction: column;
     padding: 0.7em;
-    margin: 5% 30% 10% 30%;
+    margin: 50px 30% 10% 30%;
     border-radius: 10px;
   }
 
